add per dimension spawn settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ modId = endermite_overhaul
 modGroup = mist475.endermite_overhaul
 
 # Whether to use modGroup as the maven publishing group.
-# Due to a history of using JitPack, the default is com.github.GTNewHorizons for all mods.
-useModGroupForPublishing = false
+# When false, com.github.GTNewHorizons is used.
+useModGroupForPublishing = true
 
 # Updates your build.gradle and settings.gradle automatically whenever an update is available.
 autoUpdateBuildScript = false
